adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, ullam illo aperiam nam consequatur magnam. At facilis ratione explicabo dolorum incidunt laboriosam dolor nulla, eum nisi deserunt eaque voluptatum aliquid.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, debitis. Aspernatur magnam nam veniam quisquam quibusdam officia quos, nemo ex sint excepturi quasi odio rerum impedit, eius, numquam dolor quis?</p>
 </body>
 </html>
